--- a/app/components/reviews-section/reviews-section.scss
+++ b/app/components/reviews-section/reviews-section.scss
@@ -1,3 +1,7 @@
 .reviews-section {
   display: block;
+
+  @include screen(desktop) {
+    padding-top: 33px;
+  }
 }
